fix spacing

--- a/assets/_sass/components/_featured-content.scss
+++ b/assets/_sass/components/_featured-content.scss
@@ -4,6 +4,7 @@ ul#featured-posts, ul#archive-list {
 }
 
 li.featured-post, li.archive-list--entry {
+  margin: 0.5rem 0;
   i {
     font-size: 1rem;
     text-align: center;
